@@ -1,6 +1,6 @@
-#!/bin/bash
+#!/bin/sh
 # chkconfig: 345 99 01
-# description:springmvc
+# description: spring-boot-app
 
 ##############################
 PRG="$0"
@@ -17,19 +17,21 @@ done
 ##########################
 # custom variables start
 ###########################
-#如果系统中不存在java_home,手动指定java_home
+
 if [ 0"$JAVA_HOME" = "0" ]; then
   JAVA_HOME=/usr/java/jdk1.8.0_211
 fi
 
-
-#JAVA_OPTS="-Xdebug -Xrunjdwp:server=y,transport=dt_socket,suspend=n"
-JAVA_OPTS="-XX:+HeapDumpOnOutOfMemoryError"
-APP_NAME=`basename "$PRG"`
 APP_HOME=`dirname "$PRG"`
-CONF_FILE=$APP_HOME/application.properties
+APP_NAME=`basename "$PRG"`
 PID_FILE=$APP_HOME/$APP_NAME.pid
-MAIN_JAR=$APP_HOME/*.$2
+
+OOM="-XX:+HeapDumpOnOutOfMemoryError"
+#JAVA_OPTS="-Xdebug -Xrunjdwp:server=y,transport=dt_socket,suspend=n"
+CP="$APP_HOME/lib/*:$APP_HOME/config:$APP_HOME/static"
+MAIN_CLASS="com.litong.spring.boot.video.player.Application"
+MAIN_ARGS="--spring.profiles.active=online"
+CMD="$JAVA_HOME/bin/java -Xverify:none $JAVA_OPTS -cp $CP $MAIN_JAR $MAIN_CLASS $MAIN_ARGS"
 ###########################
 # custom variables end
 ###########################
@@ -40,25 +42,7 @@ MAIN_JAR=$APP_HOME/*.$2
 lock_dir=/var/lock/subsys
 lock_file=$lock_dir/$APP_NAME
 createLockFile(){
-  [ -w $lock_dir ] && touch $lock_file
-}
-
-#读取配置文件
-read_application_properties(){
-  retval=""
-  if [ -f $CONF_FILE ]
-  then
-    while read line
-    do
-      contains=$(echo $line|grep "^#")
-      if [[ "$contains" == "" ]];then 
-        if [ ! -z $line ]; then 
-          retval="$retval --$line"
-        fi      
-      fi
-    done < $CONF_FILE
-  fi
-  echo "$retval"
+    [ -w $lock_dir ] && touch $lock_file
 }
 
 start (){
@@ -68,15 +52,13 @@ start (){
   then
     echo 'alread running...'
   else
-    APP_ARGS=$(read_application_properties)
-    CMD="$JAVA_HOME/bin/java $JAVA_OPTS -jar $MAIN_JAR $APP_ARGS"
     echo $CMD
-    echo $CMD >> $APP_HOME/logs/$APP_NAME.log
     nohup $CMD >> $APP_HOME/logs/$APP_NAME.log 2>&1 &
     echo $! > $PID_FILE
     createLockFile
-    echo [OK]
+    echo "[start success]"
   fi
+
 }
 
 stop(){
@@ -84,7 +66,7 @@ stop(){
   then
     kill `cat $PID_FILE`
     rm -f $PID_FILE
-    echo [OK]
+    echo "[stop success]"
   else
     echo 'not running...'
   fi
@@ -125,4 +107,3 @@ case $ACTION in
     echo usage "{start|stop|restart|status}"
   ;;
 esac
-
